Fixed sidebar text height to prevent letters from being cut off and rename sidebar text

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -44,3 +44,8 @@
 .medve-img {
   width: 400px;
 }
+
+.theme-doc-sidebar-item-link {
+  font-size: 15px;
+  line-height: 1.6; /* ha még mindig vágódik */
+}
